Fixed wrapping button groups

--- a/httpdocs/css/main.css
+++ b/httpdocs/css/main.css
@@ -108,6 +108,11 @@ a.thumbnail.active {
     border-bottom-right-radius: 4px;
 }
 
+/* Fix for button group wrapping */
+.btn-group {
+    display: flex;
+}
+
 @media (min-width: 768px) {
     .dl-wide dt {
         width: 200px;
